Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104959

QT_NO_TRANSLATION define breaks QML build

    XMLWordPrintable

Details

    • All
    • 4f56b7d841 (qt/qtbase/dev) 4f56b7d841 (qt/tqtc-qtbase/dev) c4db0046ec (qt/qtbase/6.3) dd8192c8f0 (qt/qtbase/6.4) c4db0046ec (qt/tqtc-qtbase/6.3) dd8192c8f0 (qt/tqtc-qtbase/6.4) 320c9ce0a5 (qt/tqtc-qtbase/6.2)

    Description

      In core/src/corelib/kernel/qmetaobject.cpp line 366-386 is the implementation of QMetaObject::metaType, however this implementation is inside an ifndef of QT_NO_TRANSLATION, above which suspiciously indeed sits the tr function, in the header file only the tr function is inside this ifndef but not the metaType function, this does seem to be a mistake because if you built core with QT_NO_TRANSLATION, trying to build declarative will not work during the linking step for libQt6Qml with an error "reference not found" for this exact function.

      Seems to me that the metaType function needs to be moved out of the define as it does not relate to translations.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            jessevg Jesse Van Gavere
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes