src/corelib/kernel/qmetaobject.cpp
@@ -357,6 +357,7 @@ QString QMetaObject::tr(const char *s, const char *c, int n) const
 {
     return QCoreApplication::translate(objectClassName(this), s, c, n);
 }
+#endif // QT_NO_TRANSLATION
 
 /*!
     \since 6.2
@@ -384,7 +385,6 @@ QMetaType QMetaObject::metaType() const
             return QMetaType::fromName(className()); // try lookup by name in that case
     }
 }
-#endif // QT_NO_TRANSLATION
 
 /*!
     Returns the method offset for this class; i.e. the index position
